KSENROLL-14129: fixing spacing of card badge in Registration
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@74062 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
@@ -249,6 +249,7 @@
     color: @badgeTextColor;
     .font-size(11);
     font-weight: bold;
+    margin-left: 1rem;
     padding: 0 0.4rem;
 
     // Edited highlighting
