--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/waitlisted.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/waitlisted.less
@@ -11,5 +11,5 @@
 .kscr-Waitlisted-clockIcon{
     color: @primaryTextColor;
     .font-size(13);
-    margin: 0 0.5rem;
+    margin-left: 0.5rem;
 }
